{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 358,
  "lineage": "3b94db67-0b9a-af65-a029-a4f2a4a15f71",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:security-group/sg-04fbe7ef8df072691",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-04fbe7ef8df072691",
            "ingress": [],
            "name": "eks-karpenter2022021422193647900000000a",
            "name_prefix": "eks-karpenter",
            "owner_id": "097281062138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-karpenter-eks_cluster_sg",
              "karpenter.sh/discovery": "eks-karpenter"
            },
            "tags_all": {
              "Name": "eks-karpenter-eks_cluster_sg",
              "karpenter.sh/discovery": "eks-karpenter"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:security-group/sg-0850f9092b72511ac",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0850f9092b72511ac",
            "ingress": [],
            "name": "eks-karpenter20220214221932348300000009",
            "name_prefix": "eks-karpenter",
            "owner_id": "097281062138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-karpenter-eks_worker_sg",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "tags_all": {
              "Name": "eks-karpenter-eks_worker_sg",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3293095992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04fbe7ef8df072691",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3996841202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fbe7ef8df072691",
            "self": false,
            "source_security_group_id": "sg-0850f9092b72511ac",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3977700807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0850f9092b72511ac",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-684516789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0850f9092b72511ac",
            "self": false,
            "source_security_group_id": "sg-04fbe7ef8df072691",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1047292782",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0850f9092b72511ac",
            "self": false,
            "source_security_group_id": "sg-04fbe7ef8df072691",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3216685100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0850f9092b72511ac",
            "self": false,
            "source_security_group_id": "sg-0850f9092b72511ac",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ba8f3bd00c59c3",
            "domain": "vpc",
            "id": "eipalloc-014ba8f3bd00c59c3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-0-182-199.compute-1.amazonaws.com",
            "public_ip": "52.0.182.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-karpenter-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:internet-gateway/igw-0e18392a2cc27db97",
            "id": "igw-0e18392a2cc27db97",
            "owner_id": "097281062138",
            "tags": {
              "Name": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ba8f3bd00c59c3",
            "connectivity_type": "public",
            "id": "nat-075bf71432f3a7eeb",
            "network_interface_id": "eni-067b098faa8317750",
            "private_ip": "10.0.1.119",
            "public_ip": "52.0.182.199",
            "subnet_id": "subnet-03205334dde026385",
            "tags": {
              "Name": "eks-karpenter-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b266514e84c3a2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-075bf71432f3a7eeb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b266514e84c3a2b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e18392a2cc27db97",
            "id": "r-rtb-0a2beef37a2bebec31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2beef37a2bebec3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:route-table/rtb-03b266514e84c3a2b",
            "id": "rtb-03b266514e84c3a2b",
            "owner_id": "097281062138",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-karpenter-private",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-private",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:route-table/rtb-0a2beef37a2bebec3",
            "id": "rtb-0a2beef37a2bebec3",
            "owner_id": "097281062138",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-karpenter-public",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-public",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00352d5f6770c8461",
            "route_table_id": "rtb-03b266514e84c3a2b",
            "subnet_id": "subnet-016afdd281e481d43"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf742930d4598f5d",
            "route_table_id": "rtb-03b266514e84c3a2b",
            "subnet_id": "subnet-0a0c38cc8248362a6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6d588780afe331",
            "route_table_id": "rtb-03b266514e84c3a2b",
            "subnet_id": "subnet-086272d0b4782c251"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075fe168714ed005f",
            "route_table_id": "rtb-0a2beef37a2bebec3",
            "subnet_id": "subnet-03205334dde026385"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3cb55e44b462da8",
            "route_table_id": "rtb-0a2beef37a2bebec3",
            "subnet_id": "subnet-09f51efd3753953b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066205f90ea4de087",
            "route_table_id": "rtb-0a2beef37a2bebec3",
            "subnet_id": "subnet-08be6018d181707c5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-016afdd281e481d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016afdd281e481d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-private-us-east-1a",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "tags_all": {
              "Name": "eks-karpenter-private-us-east-1a",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-0a0c38cc8248362a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0c38cc8248362a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-private-us-east-1b",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "tags_all": {
              "Name": "eks-karpenter-private-us-east-1b",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-086272d0b4782c251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086272d0b4782c251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-private-us-east-1c",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "tags_all": {
              "Name": "eks-karpenter-private-us-east-1c",
              "karpenter.sh/discovery": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "owned"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-03205334dde026385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03205334dde026385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-public-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-public-us-east-1a",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-09f51efd3753953b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f51efd3753953b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-public-us-east-1b",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-public-us-east-1b",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:subnet/subnet-08be6018d181707c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08be6018d181707c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097281062138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-karpenter-public-us-east-1c",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter-public-us-east-1c",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "vpc_id": "vpc-079b47607e0de2406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097281062138:vpc/vpc-079b47607e0de2406",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046683d0528d4252c",
            "default_route_table_id": "rtb-0c9d0dc40e96c50a7",
            "default_security_group_id": "sg-0033f1b9437dcb183",
            "dhcp_options_id": "dopt-f761f88d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079b47607e0de2406",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9d0dc40e96c50a7",
            "owner_id": "097281062138",
            "tags": {
              "Name": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            },
            "tags_all": {
              "Name": "eks-karpenter",
              "kubernetes.io/cluster/eks-karpenter": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}